welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: object toInt is not a member of package ch
	ch.toInt=x
           ^